[package]
name = "tirs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
byteorder = "1.4.3"
rusb = "0.9.2"
thiserror = "1.0.47"

# Waiting for this branch to be merged upstream
# https://github.com/Peternator7/strum/issues/283
[dependencies.strum]
git = "https://github.com/jscatena88/strum.git"
branch = "discrim_repr_inherit"
features = ["derive"]
